[gd_scene load_steps=2 format=3 uid="uid://yk252rday5r2"]

[ext_resource type="Script" uid="uid://dlra2qocv7qrp" path="res://Scripts/UI/DivisionPanel.gd" id="1_0wa81"]

[node name="DivisionPanel" type="Panel"]
script = ExtResource("1_0wa81")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="UnitList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UnitEntry" type="HBoxContainer" parent="UnitList"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UnitList/UnitEntry"]
layout_mode = 2

[node name="Label" type="Label" parent="UnitList/UnitEntry"]
layout_mode = 2

[node name="Button" type="Button" parent="UnitList/UnitEntry"]
layout_mode = 2

[node name="BtnCerrar" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
